fix: misaligned footer

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -176,7 +176,7 @@
   }
 
   .moddermore-footer {
-    @apply mt-40 flex w-full flex-col items-start gap-y-4 bg-neutral-100 px-20 py-16 dark:bg-neutral-800;
+    @apply mt-40 flex w-full flex-col items-start gap-y-4 bg-neutral-100 px-6 py-16 dark:bg-neutral-800 lg:px-20;
   }
 
   .moddermore-footer > p,
